--- a/TodoListUiKit/Base.lproj/Main.storyboard
+++ b/TodoListUiKit/Base.lproj/Main.storyboard
@@ -76,6 +76,7 @@
                         <outlet property="count" destination="On4-aH-d84" id="xDX-BJ-sxL"/>
                         <outlet property="date" destination="zAd-GK-VEa" id="3uY-Ei-mtj"/>
                         <outlet property="tableView" destination="Idg-9w-yBf" id="wtD-4a-W9I"/>
+                        <segue destination="kTO-hJ-Vsi" kind="show" identifier="toDetails" id="SDQ-sh-Q5h"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -85,7 +86,6 @@
         <!--Create View Controller-->
         <scene sceneID="Gy3-uZ-Z8a">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="UPS-t3-Yks" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <viewController storyboardIdentifier="CreateViewController" id="01v-BR-DGX" customClass="CreateViewController" customModule="TodoListUiKit" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="M5W-YX-adC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
@@ -167,6 +167,7 @@
                         <outlet property="nameText" destination="5ts-gO-h9g" id="eLg-At-G4k"/>
                     </connections>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UPS-t3-Yks" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2051" y="387"/>
         </scene>
@@ -177,9 +178,38 @@
                     <view key="view" contentMode="scaleToFill" id="arE-Rh-9Ls">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="March 9, 2020" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aq9-Gg-cPO">
+                                <rect key="frame" x="16" y="104" width="216.5" height="38.5"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="32"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Task details" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fcL-pB-rjE">
+                                <rect key="frame" x="16" y="158.5" width="149" height="34"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="28"/>
+                                <color key="textColor" red="0.3411764706" green="0.3411764706" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SSO-no-9Tz">
+                                <rect key="frame" x="16" y="158.5" width="35.5" height="16"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <color key="textColor" red="0.3411764706" green="0.3411764706" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="rPq-6u-VgJ"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="aq9-Gg-cPO" firstAttribute="top" secondItem="rPq-6u-VgJ" secondAttribute="top" constant="16" id="F1C-kK-Lub"/>
+                            <constraint firstItem="aq9-Gg-cPO" firstAttribute="leading" secondItem="rPq-6u-VgJ" secondAttribute="leading" constant="16" id="bEu-l4-1Do"/>
+                            <constraint firstItem="fcL-pB-rjE" firstAttribute="top" secondItem="aq9-Gg-cPO" secondAttribute="bottom" constant="16" id="ckz-xh-DwB"/>
+                            <constraint firstItem="SSO-no-9Tz" firstAttribute="top" secondItem="aq9-Gg-cPO" secondAttribute="bottom" constant="16" id="dVS-XI-2VJ"/>
+                            <constraint firstItem="SSO-no-9Tz" firstAttribute="leading" secondItem="rPq-6u-VgJ" secondAttribute="leading" constant="16" id="q5O-iu-2Fo"/>
+                            <constraint firstItem="fcL-pB-rjE" firstAttribute="leading" secondItem="rPq-6u-VgJ" secondAttribute="leading" constant="16" id="sH9-s1-3a9"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="74n-Zf-v0L"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="m6T-hg-Fr4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
