--- a/TodoListUiKit/Base.lproj/Main.storyboard
+++ b/TodoListUiKit/Base.lproj/Main.storyboard
@@ -77,6 +77,7 @@
                         <outlet property="date" destination="zAd-GK-VEa" id="3uY-Ei-mtj"/>
                         <outlet property="tableView" destination="Idg-9w-yBf" id="wtD-4a-W9I"/>
                         <segue destination="kTO-hJ-Vsi" kind="show" identifier="toDetails" id="SDQ-sh-Q5h"/>
+                        <segue destination="01v-BR-DGX" kind="show" identifier="toCreate" id="91R-HZ-3Hc"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -92,24 +93,24 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="March 9, 2020" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pJx-x5-8nw">
-                                <rect key="frame" x="16" y="60" width="216.5" height="38.5"/>
+                                <rect key="frame" x="16" y="104" width="216.5" height="38.5"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="32"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add task" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XKR-9O-b6D">
-                                <rect key="frame" x="16" y="106.5" width="112" height="33.5"/>
+                                <rect key="frame" x="16" y="150.5" width="112" height="33.5"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="28"/>
                                 <color key="textColor" red="0.3411764706" green="0.3411764706" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5ts-gO-h9g">
-                                <rect key="frame" x="16" y="180" width="382" height="34"/>
+                                <rect key="frame" x="16" y="224" width="382" height="34"/>
                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="95z-OM-bVd">
-                                <rect key="frame" x="16" y="246" width="382" height="300"/>
+                                <rect key="frame" x="16" y="290" width="382" height="300"/>
                                 <color key="backgroundColor" systemColor="systemFillColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="300" id="F6V-pP-ZgT"/>
@@ -119,19 +120,19 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sL7-sj-ygQ">
-                                <rect key="frame" x="16" y="222" width="69.5" height="16"/>
+                                <rect key="frame" x="16" y="266" width="69.5" height="16"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <color key="textColor" red="0.3411764706" green="0.3411764706" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bpF-ab-U4v">
-                                <rect key="frame" x="16" y="156" width="35.5" height="16"/>
+                                <rect key="frame" x="16" y="200" width="35.5" height="16"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <color key="textColor" red="0.3411764706" green="0.3411764706" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yo3-rX-HE7">
-                                <rect key="frame" x="16" y="562" width="382" height="60"/>
+                                <rect key="frame" x="16" y="606" width="382" height="60"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="t8v-7F-cgQ"/>
                                 </constraints>
@@ -161,6 +162,7 @@
                             <constraint firstItem="Jfb-BY-2dk" firstAttribute="trailing" secondItem="yo3-rX-HE7" secondAttribute="trailing" constant="16" id="zvT-Mv-6fo"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="mXR-2P-c8M"/>
                     <connections>
                         <outlet property="addBtn" destination="yo3-rX-HE7" id="0T9-o4-efA"/>
                         <outlet property="descriptionText" destination="95z-OM-bVd" id="Ieu-YM-Sqg"/>
@@ -192,24 +194,57 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SSO-no-9Tz">
-                                <rect key="frame" x="16" y="158.5" width="35.5" height="16"/>
+                                <rect key="frame" x="16" y="208.5" width="35.5" height="16"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <color key="textColor" red="0.3411764706" green="0.3411764706" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <textField opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="CAr-Ff-GmI">
+                                <rect key="frame" x="16" y="232.5" width="382" height="34"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h48-U8-NKg">
+                                <rect key="frame" x="16" y="274.5" width="69.5" height="16"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <color key="textColor" red="0.3411764706" green="0.3411764706" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mSm-Ff-quk">
+                                <rect key="frame" x="16" y="298.5" width="382" height="300"/>
+                                <color key="backgroundColor" systemColor="systemFillColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="300" id="Z19-qf-AGn"/>
+                                </constraints>
+                                <color key="textColor" systemColor="labelColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="rPq-6u-VgJ"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="rPq-6u-VgJ" firstAttribute="trailing" secondItem="CAr-Ff-GmI" secondAttribute="trailing" constant="16" id="7QS-I9-9f2"/>
+                            <constraint firstItem="CAr-Ff-GmI" firstAttribute="leading" secondItem="rPq-6u-VgJ" secondAttribute="leading" constant="16" id="7eI-lr-VjH"/>
+                            <constraint firstItem="SSO-no-9Tz" firstAttribute="top" secondItem="fcL-pB-rjE" secondAttribute="bottom" constant="16" id="CIJ-4E-7MW"/>
                             <constraint firstItem="aq9-Gg-cPO" firstAttribute="top" secondItem="rPq-6u-VgJ" secondAttribute="top" constant="16" id="F1C-kK-Lub"/>
+                            <constraint firstItem="rPq-6u-VgJ" firstAttribute="trailing" secondItem="mSm-Ff-quk" secondAttribute="trailing" constant="16" id="F1b-Bq-Kul"/>
+                            <constraint firstItem="mSm-Ff-quk" firstAttribute="top" secondItem="h48-U8-NKg" secondAttribute="bottom" constant="8" id="Hey-yj-XWA"/>
+                            <constraint firstItem="h48-U8-NKg" firstAttribute="top" secondItem="CAr-Ff-GmI" secondAttribute="bottom" constant="8" id="LuZ-hZ-KyF"/>
+                            <constraint firstItem="SSO-no-9Tz" firstAttribute="leading" secondItem="rPq-6u-VgJ" secondAttribute="leading" constant="16" id="XUu-RY-mlO"/>
                             <constraint firstItem="aq9-Gg-cPO" firstAttribute="leading" secondItem="rPq-6u-VgJ" secondAttribute="leading" constant="16" id="bEu-l4-1Do"/>
                             <constraint firstItem="fcL-pB-rjE" firstAttribute="top" secondItem="aq9-Gg-cPO" secondAttribute="bottom" constant="16" id="ckz-xh-DwB"/>
-                            <constraint firstItem="SSO-no-9Tz" firstAttribute="top" secondItem="aq9-Gg-cPO" secondAttribute="bottom" constant="16" id="dVS-XI-2VJ"/>
-                            <constraint firstItem="SSO-no-9Tz" firstAttribute="leading" secondItem="rPq-6u-VgJ" secondAttribute="leading" constant="16" id="q5O-iu-2Fo"/>
+                            <constraint firstItem="mSm-Ff-quk" firstAttribute="leading" secondItem="rPq-6u-VgJ" secondAttribute="leading" constant="16" id="dFd-ec-lJ3"/>
                             <constraint firstItem="fcL-pB-rjE" firstAttribute="leading" secondItem="rPq-6u-VgJ" secondAttribute="leading" constant="16" id="sH9-s1-3a9"/>
+                            <constraint firstItem="h48-U8-NKg" firstAttribute="leading" secondItem="rPq-6u-VgJ" secondAttribute="leading" constant="16" id="t6k-Ai-WA7"/>
+                            <constraint firstItem="CAr-Ff-GmI" firstAttribute="top" secondItem="SSO-no-9Tz" secondAttribute="bottom" constant="8" id="tjD-I3-E5p"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="74n-Zf-v0L"/>
+                    <connections>
+                        <outlet property="descriptionText" destination="mSm-Ff-quk" id="Y1q-JC-e59"/>
+                        <outlet property="nameText" destination="CAr-Ff-GmI" id="TEO-Zb-lq4"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="m6T-hg-Fr4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
